# FinMan

./: .gitignore  CMakeLists.txt  README.md  db.sql
assets/data/: db.sql
assets/views/: help.view  intro.view
inc/: crud.hxx  util.h  util.hxx
inc/controller/: Controller.h
inc/db/: AbstractDBInstance.h  AbstractQueryBuilder.h  DB_Base.h  DB_Result.h  QueryResult.h  SQLite3.h  SQLite3Instance.h  SQLite3QueryBuilder.h
inc/model/: AbstractDB.h  AbstractModel.h  AbstractQueryBuilder.h  Account.h  Asset.h  Budget.h  Debt.h  Income.h  Investment.h  SQLite3DB.h  SQLite3QueryBuilder.h  Transaction.h  account.hxx  asset.hxx  auth_user.hxx  budget.hxx  debt.hxx  family.hxx  income.hxx  investment.hxx  transaction.hxx
inc/shell/: Auth.h  Shell.h  auth.h  shell.h
inc/view/: AbstractView.h  AccountView.h  AssetView.h  IncomeView.h  StaticView.h  TableView.h  TransactionView.h
lib/sqlite3/: sqlite3.h
odb/i/: account-odb.ixx  asset-odb.ixx  auth_user-odb.ixx  budget-odb.ixx  debt-odb.ixx  family-odb.ixx  income-odb.ixx  investment-odb.ixx  transaction-odb.ixx
odb/inc/: account-odb.hxx  asset-odb.hxx  auth_user-odb.hxx  budget-odb.hxx  debt-odb.hxx  family-odb.hxx  income-odb.hxx  investment-odb.hxx  transaction-odb.hxx
odb/src/: account-odb.cxx  asset-odb.cxx  auth_user-odb.cxx  budget-odb.cxx  debt-odb.cxx  family-odb.cxx  income-odb.cxx  investment-odb.cxx  transaction-odb.cxx
src/: crud.cxx  main.cpp
src/controller/: Controller.cpp
src/db/: AbstractQueryBuilder.cpp  DB_Base.cpp  DB_Result.cpp  SQLite3.cpp  SQLite3Instance.cpp  SQLite3QueryBuilder.cpp
src/model/: AbstractModel.cpp  Account.cpp  Asset.cpp  Budget.cpp  Debt.cpp  Income.cpp  Investment.cpp  SQLite3DB.cpp  SQLite3QueryBuilder.cpp  Transaction.cpp  account.cxx  asset.cxx  auth_user.cxx  budget.cxx  debt.cxx  family.cxx  income.cxx  investment.cxx  transaction.cxx
src/shell/: Auth.cpp  Shell.cpp  auth.c  shell.c
src/view/: AccountView.cpp  AssetView.cpp  IncomeView.cpp  StaticView.cpp  TableView.cpp  TransactionView.cpp
test/controller/: test_controller.cpp
test/model/: test_model.cpp
test/shell/: test_shell.cpp
